--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="author" content="">
   <meta name="google-site-verification" content="hCEQI8wpg39gfal_B8lOGzqrcHZDVeUFt7cQZ8vXcNY" />
 
-  <title>DINE - Divine Institute of New Evangelization</title>
+  <title>Crossroads</title>
 
   <!-- Bootstrap Core CSS -->
   <!-- <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
