--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,9 +2,9 @@
   <div class="container text-center p-0">
     <div class="col-lg-12 col-lg-offset-1 p-0">
       <nav class="navbar navbar-expand-lg navbar-light bg-light p-10">
-        <a class="navbar-brand" href="#">
+        <!-- <a class="navbar-brand" href="#">
           <img src="img/logo.png" width="50" height="36" class="d-inline-block align-top" alt="dine_logo">
-        </a>
+        </a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
