--- a/_includes/footer_crossroad.html
+++ b/_includes/footer_crossroad.html
@@ -14,7 +14,7 @@
           </li>
         </ul> -->
         <hr class="small">
-        <p class="text-muted">This website and its content is copyright of Divine Institute of New Evangelization - &copy; 20{{ site.time | date: '%y' }}. All rights reserved.<br/>All content, material and structure of CROSSROAD are fully copyrighted. Any redistribution or reproduction of part or all of the contents in any form is prohibited. You may not, except with our express written permission, distribute or commercially exploit the content. Nor may you transmit it or store it in any other website or other form of electronic retrieval system. </p>
+        <p class="text-muted">This website and its content is copyright of CROSSROAD SCHOOL OF DISCIPLESHIP - &copy; 20{{ site.time | date: '%y' }}. All rights reserved.<br/>All content, material and structure of CROSSROAD are fully copyrighted. Any redistribution or reproduction of part or all of the contents in any form is prohibited. You may not, except with our express written permission, distribute or commercially exploit the content. Nor may you transmit it or store it in any other website or other form of electronic retrieval system.</p>
       </div>
     </div>
   </div>
