--- a/_layouts/crossroad.html
+++ b/_layouts/crossroad.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-sm text-left text-center pb-4 mb-4">
                       <h4 class="mt-4"><b class="uppercase">Age</b><br/>20 - 35 years old<br/></h4>
-                      <h4 class="mt-4"><b class="uppercase">Duration</b><br/>Sep 1 to Nov 3 2021<br/></h4>
+                      <h4 class="mt-4"><b class="uppercase">Duration</b><br/>September 1st to November 3rd 2021<br/></h4>
                       <h4 class="mt-4"><b class="uppercase">Frequency</b><br/>weekly<br/> (wednesdays for 2 hours - via zoom)<br/></h4>
                       <h4 class="mt-4"><b class="uppercase">Cost</b><br/>free<br/></h4>
                       <h4 class="mt-4"><b class="uppercase">Nationality</b><br/>all nationalities<br/></h4>                    
@@ -121,7 +121,7 @@
             <br />
             <div class="col-lg-12 text-center mt-4">
               <hr/ >
-              <h4>For more details, contact <a class="text-black" href="mailto:crossroad@dinedrc.org"><b>crossroad@dinedrc.org</b></a></h4>
+              <h4>For more details, contact <a class="text-black" href="mailto:crossroadkhom@gmail.com"><b>crossroadkhom@gmail.com</b></a></h4>
               <hr/ >
                 <h2 class="title">FACILITATORS</h2>
                 <div class="text-center">
