--- a/_layouts/crossroad.html
+++ b/_layouts/crossroad.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-sm text-left text-center pb-4 mb-4">
                       <h4 class="mt-4"><b class="uppercase">Age</b><br/>20 - 35 years old<br/></h4>
-                      <h4 class="mt-4"><b class="uppercase">Duration</b><br/>June 29th to August 31st 2022<br/></h4>
+                      <h4 class="mt-4"><b class="uppercase">Duration</b><br/>October 18th to December 20th 2023<br/></h4>
                       <h4 class="mt-4"><b class="uppercase">Frequency</b><br/>weekly<br/> (wednesdays for 2 hours - via zoom)<br/></h4>
                       <h4 class="mt-4"><b class="uppercase">Cost</b><br/>free<br/></h4>
                       <h4 class="mt-4"><b class="uppercase">Nationality</b><br/>all nationalities<br/></h4>                    
