--- a/_layouts/crossroad.html
+++ b/_layouts/crossroad.html
@@ -11,7 +11,7 @@
         <section id="crossroad" class="bg-crossroad">
             <div class="container">
                 <div id="title-crossroad" class="col-lg-12 text-center">
-                    <span class="title-xl font-crossroad">CROSSROAD</span><p class="title-medium mt-n4 mb-n1 font-school">SCHOOL OF DISCIPLESHIP</p>
+                    <span class="title-xl font-crossroad">KASIH House of Mission</span><p class="title-medium mt-n4 mb-n1 font-school">CROSSROAD school of discipleship</p>
                 </div>
             </div>
         </section>
